# mediarepo

mediarepo-api/: Cargo.toml
mediarepo-api/src/tauri_plugin/: custom_schemes.rs  utils.rs
mediarepo-api/src/tauri_plugin/commands/: repo.rs
mediarepo-daemon/src/: utils.rs
mediarepo-ui/: angular.json  package.json
mediarepo-ui/src-tauri/: Cargo.toml  tauri.conf.json
mediarepo-ui/src/app/: app.component.ts  app.module.ts
mediarepo-ui/src/app/components/core/: core.component.html  core.component.ts  core.module.ts
mediarepo-ui/src/app/components/core/empty-tab/: empty-tab.component.html
mediarepo-ui/src/app/components/core/files-tab/: files-tab.component.html
mediarepo-ui/src/app/components/core/files-tab/files-tab-sidebar/: files-tab-sidebar.component.html
mediarepo-ui/src/app/components/shared/app-common/: app-common.module.ts
mediarepo-ui/src/app/components/shared/file/: file.module.ts
mediarepo-ui/src/app/components/shared/input/: input.module.ts
mediarepo-ui/src/app/components/shared/repository/: repository.module.ts
mediarepo-ui/src/app/components/shared/sidebar/: sidebar.module.ts
mediarepo-ui/src/app/services/file/: file.helper.ts
mediarepo-ui/src/app/services/repository/: repository.service.ts
mediarepo-ui/src/assets/: pdf-2.16.450-es5.min.js  pdf-2.16.450.min.js  pdf.sandbox-2.16.450-es5.min.js  pdf.worker-2.16.450-es5.min.js  pdf.worker-2.16.450.min.js  viewer-2.16.450-es5.min.js  viewer-2.16.450.min.js
mediarepo-ui/src/assets/i18n/: en.json  zh-cn.json
(+33 files in other folders)
